force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/NCMT_Core_Shell_Cost_Parameter__c.object-meta.xml
<CustomObject>
    <description>NCMT Core Shell Cost Parameters</description>
    <label>Core Shell Cost Parameter</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Core Shell Cost Parameters</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Core Shell Cost Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>