force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Core_Shell_Cost_Parameter_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Core_Shell_Cost_Parameter_Identifier__c</fullName>
    <label>Core Shell Cost Parameter Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>