force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category__c</fullName>
    <description>Cost Category ID</description>
    <label>Cost Category</label>
    <referenceTo>NCMT_Cost_Category__c</referenceTo>
    <relationshipLabel>Core Shell Cost Parameters</relationshipLabel>
    <relationshipName>Core_Shell_Cost_Parameters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>