force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Cost_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sub_Type__c</fullName>
    <description>NCMT Cost Sub Type</description>
    <label>Cost Sub Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>