force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Cost_Sub_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sub_Type_Description__c</fullName>
    <description>Cost Sub Type Description</description>
    <label>Cost Sub Type Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>