force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <formula>Cost_Category__r.Category_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Type</label>
    <type>Text</type>
</CustomField>