force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Duplicate_Maintenance_Related__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Maintenance_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Maintenance Related</label>
    <type>Checkbox</type>
</CustomField>