force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Equipment_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Unit_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Equipment Unit Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>