force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Level_3_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Description__c</fullName>
    <label>Level 3 Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>