force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Other_Space_Size__c.field-meta.xml
<CustomField>
    <fullName>Other_Space_Size__c</fullName>
    <description>Other Space Size</description>
    <label>Other Space Size</label>
    <type>TextArea</type>
</CustomField>