force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Other_Space_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Other_Space_Unit_Cost__c</fullName>
    <description>Other Space Unit Cost</description>
    <label>Other Space Unit Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>