force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Parking_Space_Unit__c.field-meta.xml
<CustomField>
    <fullName>Parking_Space_Unit__c</fullName>
    <label>Parking Space Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>CFM</fullName>
            </value>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>KVA</fullName>
            </value>
            <value>
                <fullName>KW</fullName>
            </value>
            <value>
                <fullName>LB</fullName>
            </value>
            <value>
                <fullName>LF</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>Mbtu</fullName>
            </value>
            <value>
                <fullName>pgross</fullName>
            </value>
            <value>
                <fullName>TN</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>GSF</fullName>
            </value>
            <value>
                <fullName>KBtu</fullName>
            </value>
            <value>
                <fullName>TON</fullName>
            </value>
            <value>
                <fullName>GPD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>