force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>