force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Productivity__c.field-meta.xml
<CustomField>
    <fullName>Productivity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Productivity</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>