force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Repair_Related__c.field-meta.xml
<CustomField>
    <fullName>Repair_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repair Related</label>
    <type>Checkbox</type>
</CustomField>