force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Type1__c.field-meta.xml
<CustomField>
    <fullName>Type1__c</fullName>
    <label>Type1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Cost</fullName>
            </value>
            <value>
                <fullName>Operation</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Retro-Commissioning</fullName>
            </value>
            <value>
                <fullName>Major Repair</fullName>
            </value>
            <value>
                <fullName>System Replacement</fullName>
            </value>
            <value>
                <fullName>Residual Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>