force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Type2__c.field-meta.xml
<CustomField>
    <fullName>Type2__c</fullName>
    <label>Type2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Routine Maintenance</fullName>
            </value>
            <value>
                <fullName>Custodial</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Facility Management</fullName>
            </value>
            <value>
                <fullName>Electricity - Grid</fullName>
            </value>
            <value>
                <fullName>Renewable Energy</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Other Heating</fullName>
            </value>
            <value>
                <fullName>Other Cooling</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Non-potable water</fullName>
            </value>
            <value>
                <fullName>Sewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>