force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/fields/Type3__c.field-meta.xml
<CustomField>
    <fullName>Type3__c</fullName>
    <label>Type3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real Property</fullName>
                <default>true</default>
                <label>Real Property</label>
            </value>
            <value>
                <fullName>FF&amp;E</fullName>
            </value>
            <value>
                <fullName>Renewable Energy</fullName>
            </value>
            <value>
                <fullName>Computer Systems</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>