force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Core_Shell_Cost_Parameter_Identifier__c</columns>
    <columns>Cost_Category__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Cost_Sub_Type__c</columns>
    <columns>Cost_Sub_Type_Description__c</columns>
    <columns>Other_Space_Unit__c</columns>
    <columns>Other_Space_Unit_Cost__c</columns>
    <columns>Other_Space_Size__c</columns>
    <columns>Parking_Space_Unit__c</columns>
    <columns>Parking_Space_Unit_Cost__c</columns>
    <columns>Parking_Space_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>