force-app/main/default/objects/NCMT_Core_Shell_Cost_Parameter__c/listViews/FY_2016.listView-meta.xml
<ListView>
    <fullName>FY_2016</fullName>
    <columns>NAME</columns>
    <columns>Core_Shell_Cost_Parameter_Identifier__c</columns>
    <columns>Cost_Category__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Cost_Sub_Type__c</columns>
    <columns>Cost_Sub_Type_Description__c</columns>
    <columns>Other_Space_Unit__c</columns>
    <columns>Other_Space_Unit_Cost__c</columns>
    <columns>Other_Space_Size__c</columns>
    <columns>Parking_Space_Unit__c</columns>
    <columns>Parking_Space_Unit_Cost__c</columns>
    <columns>Parking_Space_Size__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2016</value>
    </filters>
    <label>FY-2016</label>
</ListView>